RESOLVED FIXED13905
REGRESSION: A Chinese dictionary widget has a problem with XMLHttpRequest response encoding
https://bugs.webkit.org/show_bug.cgi?id=13905
Summary REGRESSION: A Chinese dictionary widget has a problem with XMLHttpRequest res...
Alexey Proskuryakov
Reported 2007-05-29 10:21:38 PDT
rdar://5185933 This widget gets an HTML response, and the response encoding is determined by a Http-Equiv META. Shipping WebKit is naive enough to just feed any XHR responses to an HTML/XML decoder, so it always honors METAs. However, TOT matches other browsers (and the current draft spec) in that it only looks inside XML responses for encoding information. The good news is that it has been suggested that browsers should also look inside HTML responses in order to implement XHR.responseHTML some day (or to extend responseXML to work with HTML). So, maybe we can still get the spec changed.
Attachments
test case (1.72 KB, application/zip)
2007-05-29 10:35 PDT, Alexey Proskuryakov
no flags
proposed fix (6.88 KB, patch)
2007-06-21 10:55 PDT, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2007-05-29 10:35:47 PDT
Created attachment 14768 [details] test case
Anders Carlsson
Comment 2 2007-05-29 10:46:12 PDT
If we can't get the spec changed, we need to add yet another dashboard quirk :/
Anne van Kesteren
Comment 3 2007-06-20 09:19:21 PDT
The specification is actually already changed :-) http://www.w3.org/TR/XMLHttpRequest/#text-response-entity-body
Alexey Proskuryakov
Comment 4 2007-06-21 10:55:53 PDT
Created attachment 15163 [details] proposed fix
Anders Carlsson
Comment 5 2007-06-21 11:31:28 PDT
Comment on attachment 15163 [details] proposed fix Great work! r=me
Alexey Proskuryakov
Comment 6 2007-06-21 12:04:36 PDT
Committed revision 23718.
Note You need to log in before you can comment on or make changes to this bug.