WebCore/xml/xmlhttprequest.h
@@ -113,6 +113,7 @@ private:
 
     void processSyncLoadResults(const Vector<char>& data, const ResourceResponse&);
 
+    String responseMIMEType() const;
     bool responseIsXML() const;
 
     String getRequestHeader(const String& name) const;
